force-app/main/default/objects/AR_QA_Test__c/AR_QA_Test__c.object-meta.xml
<CustomObject>
    <label>AR-QA-Test</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>AR-QA-Test Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AR-QA-Tests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>