force-app/main/default/objects/AR_QA_Test__c/fields/AR_QA_Team__c.field-meta.xml
<CustomField>
    <fullName>AR_QA_Team__c</fullName>
    <label>AR_QA_Team</label>
    <referenceTo>AR_QA_Team__c</referenceTo>
    <relationshipLabel>AR-QA-Tests</relationshipLabel>
    <relationshipName>AR_QA_Tests</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>