force-app/main/default/objects/AR_QA_Test__c/fields/CustomTextField01__c.field-meta.xml
<CustomField>
    <fullName>CustomTextField01__c</fullName>
    <externalId>true</externalId>
    <label>CustomTextField01</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>