force-app/main/default/objects/AR_QA_Test__c/fields/EXT_04_AutoNumberField_c__c.field-meta.xml
<CustomField>
    <fullName>EXT_04_AutoNumberField_c__c</fullName>
    <displayFormat>N-{00000}</displayFormat>
    <externalId>true</externalId>
    <label>EXT-04-AutoNumberField</label>
    <type>AutoNumber</type>
</CustomField>