force-app/main/default/objects/AR_QA_Test__c/fields/Test__c.field-meta.xml
<CustomField>
    <fullName>Test__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AR_QA_Team</label>
    <referenceTo>AR_QA_Team__c</referenceTo>
    <relationshipLabel>AR-QA-Tests (AR_QA_Team)</relationshipLabel>
    <relationshipName>AR_QA_Tests1</relationshipName>
    <type>Lookup</type>
</CustomField>